// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset renders the UI snapshot correctly 1`] = `
<fieldset
  className="css-1xdhyk6"
  id="fieldset"
>
  <legend>
    Legend Text
  </legend>
  <p>
    Some other fields
  </p>
</fieldset>
`;

exports[`Fieldset renders the UI snapshot correctly 2`] = `
<fieldset
  className="css-1xdhyk6"
  id="fieldset"
>
  <legend>
    Legend Text
    <span>
       (required)
    </span>
  </legend>
  <p>
    Some other fields
  </p>
</fieldset>
`;

exports[`Fieldset renders the UI snapshot correctly 3`] = `
<fieldset
  className="css-1xdhyk6"
  id="fieldset"
>
  <legend>
    Legend Text
  </legend>
  <p>
    Some other fields
  </p>
</fieldset>
`;

exports[`Fieldset renders the UI snapshot correctly 4`] = `
<fieldset
  className="css-1xdhyk6"
  id="fieldset"
>
  <legend>
    Legend Text
  </legend>
  <p>
    Some other fields
  </p>
</fieldset>
`;

exports[`Fieldset renders the UI snapshot correctly 5`] = `
<fieldset
  className="css-kle7zy"
  id="withChakraProps"
>
  <legend>
    Legend Text
  </legend>
  <p>
    Some other fields
  </p>
</fieldset>
`;

exports[`Fieldset renders the UI snapshot correctly 6`] = `
<fieldset
  className="css-1xdhyk6"
  data-testid="props"
  id="withOtherProps"
>
  <legend>
    Legend Text
  </legend>
  <p>
    Some other fields
  </p>
</fieldset>
`;
